test_programs/compile_failure/field_modulo/src/main.nr
fn main(x: field) -> pub field {
    x % 2
}
